# ai-vs-human

./: .all-contributorsrc  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ai-vs-human-threat-model.md  biome.json  instrumentation-client.ts  lefthook.yml  next.config.ts  package.json  pnpm-lock.yaml  security_best_practices_report.md  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  vercel.json  vitest.config.ts
.github/workflows/: ci.yml  desktop-release.yml  vercel-deployment-checks.yml
app/: error.tsx  global-error.tsx  globals.css  icon.tsx  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
app/[owner]/: error.tsx  loading.tsx  page.tsx
app/about/: page.tsx
app/docs/: layout.tsx  page.mdx
app/leaderboard/: layout.tsx  page.tsx
app/login/: LoginContent.tsx  page.tsx
app/ranks/: page.tsx
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/sources/: cursor.rs  mod.rs
components/: ErrorBoundary.tsx
components/analytics/: LeaderboardViewTracker.tsx
convex/: auth.ts  crons.ts  http.ts  schema.ts  seed.ts
lib/: aggregateUserStats.ts  auth-server.ts  botMappingSuggestions.ts  constants.ts  docsNav.ts  leaderboardNav.ts  loginRedirect.ts  parseRepoInput.ts  privateRepoCardMode.ts  privateSyncTrigger.ts  privateVisibility.ts  sentry.ts  seo.ts  tracking.ts  unknownAi.ts  unknownBotSection.ts  unknownBots.ts  userAutoAnalyzePlan.ts  utils.ts  zeroAiGuidance.ts
lib/hooks/: useSound.ts  (+1 more)
scripts/: find-unspecified-ai.ts
(+182 files in other folders)
